[package]
name = "actix-helper-macros"
description = "Helper macros to make life easier developing actix-web applications"
repository = "https://github.com/mcronce/actix-helper-macros"
license = "MIT"
keywords = ["actix", "http", "web", "async"]
version = "0.1.0"
authors = ["Mike Cronce <mike@cronce.io>"]
edition = "2018"

[dependencies]
actix-web = "~2"
serde = "~1"

actix-proc-macros = {path = "actix-proc-macros", version = "~0.1"}

